--- a/templates/user_guide_fr.html
+++ b/templates/user_guide_fr.html
@@ -1,7 +1,7 @@
 <div class = "systemguide">
     <h1>Guide du système "Clé en Main" pour Foundry VTT"</h1>
     <h2>Introduction</h2>
-    <p>Bienvenue dans le système "Clé en main" pour Foundry.<br/>Ce petit guide vous en présentera les fonctionnalités et particularité.</p>
+    <p>Bienvenue dans le système "Clé en main" pour Foundry.<br/>Ce petit guide vous en présentera les fonctionnalités et particularités.</p>
 
     <h2>Options</h2>
     <p> les options du système sont les suivantes:</p>
