:books: Ajout du texte sur les primes et pénalités

--- a/templates/user_guide_fr.html
+++ b/templates/user_guide_fr.html
@@ -53,7 +53,7 @@
     <h2>Jets de dés</h2>
     <p>Les jets de compétence sont effectués en cliquant sur le symbole <em class="fas fa-dice">&nbsp;</em>.</p><p>Une fenetre apparaît, dans laquelle vous pouvez préciser l'utilisation d'un point d'héroïsme pour rajouter 1d6. Attention: le point sera automatiquement dépensé depuis la réserve du personnage.</p>
     <h3>Primes et pénalités</h3>
-    <p>Toutes les primes sont gérées</p>
-    <p>Toutes les pénalités sont gérées sauf Risque qui reste à la discrétion du MJ</p>
+    <p>Toutes les primes sont gérées.</p>
+    <p>Toutes les pénalités sont gérées sauf Risque qui reste à la discrétion du MJ.</p>
     <p></p>
 </div>
