--- a/less/cleenmain.less
+++ b/less/cleenmain.less
@@ -1,6 +1,7 @@
 @import "./config.less";
 @import "../../../systems/cleenmain/less/player-sheet.less";
 @import "../../../systems/cleenmain/less/npc-sheet.less";
+@import "../../../systems/cleenmain/less/vehicle-sheet.less";
 @import "../../../systems/cleenmain/less/item-sheet.less";
 @import "../../../systems/cleenmain/less/boon-sheet.less";
 @import "../../../systems/cleenmain/less/skill-sheet.less";
