--- a/less/config.less
+++ b/less/config.less
@@ -58,6 +58,12 @@
 @npc-skill-font-color: black;
 @npc-health-font: 1.2rem "Signika";
 
+// vehicle
+@vehicle-name-font: 2em "Signika";
+@vehicle-name-color: @title-color;
+@vehicle-line-font: 1.2rem "Signika";
+@vehicle-line-font-color: black;
+
 @dialog-font: 1rem "Signika";
 @dialog-intro-font: bold 1.2rem "Signika";
 @dialog-formula-font: bold 1.2rem "Signika";
