:sparkles: Background pour véhicule

--- a/less/config.less
+++ b/less/config.less
@@ -113,6 +113,7 @@ input {
 @playersheet-background: repeat url('../../../ui/parchment.jpg');
 @itemsheet-background: repeat url('../../../ui/parchment-white.jpg');
 @npcsheet-background: repeat url('../../../ui/parchment-white.jpg');
+@vehiculesheet-background: repeat url('../../../ui/parchment-white.jpg');
 @chat-background: repeat url('../../../ui/parchment-white.jpg');
 @chat-title-background: repeat url('../../../ui/denim.png');
 @chat-end-background: top/50% repeat url('../../../ui/parchment-white.jpg');
