--- a/less/vehicle-sheet.less
+++ b/less/vehicle-sheet.less
@@ -19,7 +19,7 @@
         width: 10em;
     }
     .window-content {
-        background: @npcsheet-background;
+        background: @vehiculesheet-background;
         background-color: @clear-background;
         font: @default-font;
     }
