:sparkles: option visibilité jets pnjs

--- a/templates/user_guide_fr.html
+++ b/templates/user_guide_fr.html
@@ -7,7 +7,8 @@
     <p> les options du système sont les suivantes:</p>
     <ul>
         <li>Nombre de joueurs : cette valeur modifie les points d'endurance des PNJs et le maximum de points d'héroïsme des PJs.</li>
-        <li>Règles avancées : cette option active l'utilisation des règles avancées de clé en main : PNJs "élite", nouvelle prime/pénalités... Ces règles sont expliquées dans les chapitres correspondants</li>
+        <li>Règles avancées : cette option active l'utilisation des règles avancées de clé en main : PNJs "élite", nouvelle prime/pénalités... Ces règles sont expliquées dans les chapitres correspondants.</li>
+        <li>Visibilité des jets des PNJs : cette option indique si les jets de dés des PNJs contrôlés par le MJ sont visibles par les joueurs et joueuses: invisibles, visibles, ou selon le paramétrage du chat du MJ au moment du jet.</li>
     </ul>
     <h2>Feuilles de Personnage</h2>
     <p> Il y a deux types de personnages: les PJs et les PNJs. Lorsque vous créez un nouveau personnage, vous devez choisir son type.</p>
